assets/style/style.css
/* Import CSS *//* Import CSS *//* Import CSS *//* Import CSS */
@import url('https://fonts.googleapis.com/css?family=Lato');
@import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
/* Import CSS *//* Import CSS *//* Import CSS */

/* Général *//* Général *//* Général *//* Général */
body
{
  background:#fff;
  font-family:'Lato';
  margin:0 auto;
  padding:0;
  box-sizing: border-box;
  width: 100%;
}

a
{
  color:#fff;
  text-decoration:none;
}
a:hover{
  color: #c3c3c3;
  text-decoration: none;
}
/* Général *//* Général *//* Général */

/* MENU DE NAVIGATION *//* MENU DE NAVIGATION *//* MENU DE NAVIGATION *//* MENU DE NAVIGATION */
header{
  position: fixed;
  z-index: 2;
  top: 0;
  width: 100%;

}
.material-icons
{
  font-size:24px;
  margin-right:12px;
  vertical-align:text-bottom;
}

.menu
{
  background:#3f51b5;
  color:#fff;
  height:50px;
  width: auto;
}

.menu .title
{
  font-size:30px;
  font-weight:bold;
  line-height:50px;
  padding:0 20px;
  text-transform:uppercase;
  position: relative;
}

.menu nav
{
  background:inherit;
  font-size:20px;
  font-weight:bold;
  height:0;
  overflow:hidden;
  text-transform:uppercase;
  transition:height .2s;
}

.menu nav > *
{
  display:block;
  z-index: 3;
  letter-spacing:1px;
  line-height:2.5;
  padding:0 20px;
  width:100%;
}

.menu nav input
{
  background:rgba(0,0,0,.2);
  border:none;
  color:#fff;
}

.menu .burger
{
  appearance:none;
  -moz-appearance:none;
  -webkit-appearance:none;
  color:inherit;
  cursor:pointer;
  font-family:'Material Icons';
  font-size:30px;
  line-height:50px;
  margin:0;
  outline:0;
  padding:0;
  position:absolute;
  text-align:center;
  top:0;
  right:20px;
  width:50px;

}

.menu .burger:before
{
  content:'menu';
}

.menu .burger:checked:before
{
  content:'close';
}

.menu .burger:checked + nav
{
  height:calc(100vh - 50px);
  z-index: 4;
  position: relative;
}
p
{
  padding:5px 15px ;
}
/** MENU DE NAVIGATION **//** MENU DE NAVIGATION **//** MENU DE NAVIGATION **/

/* Bannière *//* Bannière *//* Bannière *//* Bannière */
#textbanner{
  font-size: 220%;
  position: relative;
  bottom: -110px;
  font-weight:bold;
  text-transform: uppercase;
  font-family: 'Lato';
  color: #3f51b5;
  z-index: 1;
  text-shadow: 2px 2px 2px white;
}
div#slider { width: 100%; max-width: 1000px; overflow: hidden;text-align: center;
 }

div#slider figure {
  width: 500%;
  margin: 0;
  padding: 0;
  font-size: 0;
  text-align: center;
}
div#slider figure img { width: 20%; height: auto; padding-top: 15px;}

@keyframes slidy {
  0% { left: 0%; }
  20% { left: 0%; }
  25% { left: -100%; }
  45% { left: -100%; }
  50% { left: -200%; }
  70% { left: -200%; }
  75% { left: -300%; }
  95% { left: -300%; }
  100% { left: -400%; }
}
div#slider figure {
  position: relative;
  width: 500%;
  margin: 0;
  padding: 0;
  font-size: 0;
  left: 0;
  text-align: left;
  animation: 30s slidy infinite;
}
/* Bannière *//* Bannière *//* Bannière */

/* SECTION *//* SECTION *//* SECTION *//* SECTION */
article > h2{
  color: #3f51b5;
  text-shadow: 2px 2px 2px white ;
  font-family: 'Lato';
  font-size: 22px;
  text-align: center;
  padding-top: 35px;
  padding-bottom: 5px;
}
article{
  background-color: rgba(63, 81, 181, 0.3);
  width: 100%;
}
img{
  width: 95%;
  height: 95%;
}  
section{
  background-color: rgba(63, 81, 181, 0.3);
}
#imgarticle{
  display: flex;
  justify-content: center;
  margin-top: 10px;
}

.textarticle > a{
  color: blue;
  display: flex;
  justify-content: flex-end;
  padding-right: 12px;
  padding-bottom: 30px;
}
/* SECTION *//* SECTION *//* SECTION */

/* PAGINATION *//* PAGINATION *//* PAGINATION *//* PAGINATION */
#pages {
  display: inline-block;
}

#pages a {
  color: black;
  float: left;
  padding: 8px 16px;
  text-decoration: none;
}

#pages a.active {
  background-color: #4CAF50;
  color: white;
}
#pages a:hover:not(.active) {background-color: #a833ff;}
#pagination{
  display: flex;
  justify-content: center;
}
/* PAGINATION *//* PAGINATION *//* PAGINATION */

/* FOOTER *//* FOOTER *//* FOOTER *//* FOOTER */
footer{
  background-color: rgba(63, 81, 181, 0.4);
  position: relative;
  bottom: 0;
  width: 100%;
  margin:0 !important;
}
#footericons{
  display: flex;
  justify-content: space-around;
  align-self: center;
  width: 30%;
  height: 30%;
}
#textfooter{
  
}
/* FOOTER *//* FOOTER *//* FOOTER */

/* MEDIA QUERIES *//* MEDIA QUERIES *//* MEDIA QUERIES *//* MEDIA QUERIES */
@media (min-width:1000px)  {
  body{
    width: 80%;
  }
  p{
    font-size: 1.4em;
  }
  article h2{
    font-size: 2.3em;
  }
  div#slider { overflow: hidden; margin: 0 auto; max-width: 100%;
  }
  .menu
  {
  width: 80%;
  }
  img{
  width: 90%;
  height: 90%;
  }
  .menu .burger
  {
  appearance:none;
  -moz-appearance:none;
  -webkit-appearance:none;
  color:inherit;
  cursor:pointer;
  font-family:'Material Icons';
  font-size:30px;
  line-height:50px;
  margin-left:600px;
  outline:0;
  position: relative;
  text-align:center;
  top:0;
  width:50px;
  }
}
/* MEDIA QUERIES *//* MEDIA QUERIES *//* MEDIA QUERIES */

/* INSCRIPTION *//* INSCRIPTION *//* INSCRIPTION *//* INSCRIPTION */
form{
  
}
#inscription{
  margin-top: 50px;
  min-height: 518px;
  max-height: 1080px;
}
#footer2{
  bottom: 0;
  width: 100%;
}
#divdejainscrit{
  display: flex;
  justify-content: center;
  padding-bottom: 15px;
}
/* INSCRIPTION *//* INSCRIPTION *//* INSCRIPTION */

/* CONTACT *//* CONTACT *//* CONTACT *//* CONTACT */
#logocontact{
  display: flex;
  justify-content: space-around;
}

